--- a/src/main/res/layout/accelerometer_readout_view.xml
+++ b/src/main/res/layout/accelerometer_readout_view.xml
@@ -4,10 +4,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="Hello World, ac-readout"
-    />
+    <TextView
+        android:id="@+id/readout_text_view"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Hello World, ac-readout"
+        />
 </LinearLayout>
 
