--- a/src/main/res/layout/main.xml
+++ b/src/main/res/layout/main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
@@ -9,11 +10,19 @@
         android:layout_height="wrap_content"
         android:text="This is your Main activity" />
     
-    <fragment android:name="com.slightlyrobot.app.AccelerometerReadoutFragment"
-              android:id="@+id/accelerometer_readout_fragment"
-              android:layout_weight="2"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent" />
+    <fragment
+        android:name="com.slightlyrobot.app.AccelerometerReadoutFragment"
+        android:id="@+id/accelerometer_readout_fragment"
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    
+    <Button
+        android:id="@+id/export_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/export_button_text"
+        android:onClick="exportRawData" />
 
 </LinearLayout>
 
